--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title> Profile page </title>
     </head>
     <body>
+        <header> 
+            <h1>Hello, I'm Elena Choi</h1>
+        </header>
+        <nav class = "crumbs">
+            <ul>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#workexperiences">Work experiences</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <div id = "whole-page">
+            <img class = "profile-image" src = "93021389.jpeg" alt="profile-img" />
+            <div id = "Bio">
+                Driven by innovation of Software Engineering and ML/AI Technology
+            </div>
+        </div>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>
+              Hi, my name is Elena Choi. I'm eager to be an aspiring Software Engineer, AI Engineer, and ML Developer.
+              I'm a senior year Computer Science major student at the Pennsylvania State University.
+            </p>
+          </section>
         
     </body>
 </html>
